// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day renderHoverLabel() when getShouldSelectAsStartDate returns false returns the correct markup when isEnd is false 1`] = `
<DayLabel
  Icon={[Function]}
  bottomAligned={false}
  isSelected={false}
  label="Return"
  leftAligned={false}
/>
`;

exports[`Day renderHoverLabel() when getShouldSelectAsStartDate returns true returns the correct markup 1`] = `
<DayLabel
  Icon={[Function]}
  bottomAligned={false}
  isSelected={false}
  label="Depart"
  leftAligned={true}
/>
`;

exports[`Day renders correctly when isDesktopDevice is true and this.state.hover is true 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

<div
  aria-label="20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  >
    20
  </div>
  <DayLabel
    Icon={[Function]}
    bottomAligned={false}
    isSelected={false}
    label="Return"
    leftAligned={false}
  />
</div>
`;

exports[`Day renders correctly when isDisabled is true 1`] = `
.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
  cursor: initial;
  color: #dadada;
  background: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

<div
  aria-label="20 January 2018. Selected for return"
  className="emotion-1 "
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  >
    20
  </div>
</div>
`;

exports[`Day renders correctly when isEnd is true 1`] = `
.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
  padding-top: 34px;
  z-index: 1;
  border: 2px solid #bff4f2;
  box-shadow: 0 0 0 1px #bff4f2;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 31px;
  }
}

<div
  aria-label="Return SYD. 20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="emotion-0"
  >
    20
  </div>
  <DayLabel
    Icon={[Function]}
    bottomAligned={false}
    isSelected={true}
    label="SYD"
    leftAligned={false}
  />
</div>
`;

exports[`Day renders correctly when isFirstDayOfMonth is true 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

<div
  aria-label="20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="emotion-0"
  >
    20
  </div>
</div>
`;

exports[`Day renders correctly when isInRange is true 1`] = `
.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
  background-color: #e8f7f7;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  aria-label="20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  >
    20
  </div>
</div>
`;

exports[`Day renders correctly when isLoadingPrice is true 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

<div
  aria-label="20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  >
    20
  </div>
  <Price
    currencySymbol="$"
    isDesktopDevice={false}
    isLoadingPrice={true}
    isLowestPrice={false}
    taxValue={null}
    value={null}
  />
</div>
`;

exports[`Day renders correctly when isOutside is true 1`] = `<div />`;

exports[`Day renders correctly when isStart is true 1`] = `
.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
  padding-top: 34px;
  z-index: 1;
  border: 2px solid #bff4f2;
  box-shadow: 0 0 0 1px #bff4f2;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 31px;
  }
}

<div
  aria-label="Depart MEL. 20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="emotion-0"
  >
    20
  </div>
  <DayLabel
    Icon={[Function]}
    bottomAligned={false}
    isSelected={true}
    label="MEL"
    leftAligned={true}
  />
</div>
`;

exports[`Day renders correctly when isToday is true 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: #bff4f2;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

<div
  aria-label="20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  >
    20
  </div>
</div>
`;

exports[`Day renders correctly when price is provided 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

<div
  aria-label="20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  >
    20
  </div>
  <Price
    currencySymbol="$"
    isDesktopDevice={false}
    isLoadingPrice={false}
    isLowestPrice={false}
    taxValue={2}
    value={123}
  />
</div>
`;

exports[`Day renders correctly with defaults 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

<div
  aria-label="20 January 2018. "
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  >
    20
  </div>
</div>
`;

exports[`Day renders correctly with props provided 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 36px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 33px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 2px 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  box-sizing: content-box;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 0.95;
  }
}

<div
  aria-label="20 January 2018. Selected for return"
  className="emotion-1 d1555682400000"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  >
    20
  </div>
</div>
`;
